K8s deploymwntfiles/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-name
  labels:
    name: app-name
    environment: production
