K8s deploymwntfiles/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-name
  labels:
    app: app-name
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app-name
  template:
    metadata:
      labels:
        app: app-name
    spec:
      containers:
      - name: image-app-name
        image: Nagarajumc/build:13:5
        ports:
        - containerPort: 8080
